--- a/css/estilos.css
+++ b/css/estilos.css
@@ -54,7 +54,7 @@ header nav {
 	align-items:center;
 }
 
-header nav a {
+nav a {
 	color: antiquewhite;
 	text-align: center;
 	text-decoration: none;
@@ -62,17 +62,28 @@ header nav a {
 	font-size: 20px;
 	/* Flexbox */
 	flex-grow:1;
+	
+
 }
 
-header nav a:hover {
+
+nav a:hover {
 	
+	text-shadow:0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 30px #ffffff;
+
+
 }
+
 .texto p{
 	padding-top: 30px;
 	padding-left: 30px;
 	padding-right: 30px;
 	text-align: justify;
-}
+	font-size: 1.2em;
+
+	
+
+	}
 .pflex{
 	display:flex;
 	justify-content:espace-around;
@@ -88,6 +99,7 @@ header nav a:hover {
 
 .pflex iframe{
 	padding-left: 30px;
+	border-radius: 10px;
 
 }
 
@@ -96,6 +108,8 @@ header nav a:hover {
 	padding-left: 50px;
 	padding-right: 30px;
 	text-align: justify;
+	font-size: 1.2em;
+	
 	
 }
 .main h2{
@@ -131,41 +145,29 @@ header nav a:hover {
 	border-bottom:none;
 }
 
-aside {
-	
-	background-repeat: no-repeat;
-	background-size: cover;
-	padding:20px;
-	/*FLEX*/
-	flex:1 1 30%;
-	/*flex:0 0 300px;*/
-
+.slider{
 	display: flex;
-	flex-wrap:wrap;
-	flex-direction:row;
-	justify-content:space-around;
+	max-width: 112em;
+	height: 300px;
 	width: 100%;
+	margin-left: 50px;
+	margin-right: 50px;
+	overflow-x:scroll;/*le indicamos al contenedor que lo que sobra no lo muestre si no que lo esconda y solo se pieda acceder a el usando el scroll */
+	scroll-snap-type: x 
+	mandatory;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(rgb(243, 212, 212), rgb(246, 246, 212), rgb(245, 241, 223), 0.5);
 
 }
 
-
-.widget1{
-	height:300px;
-	margin:20px;
-	background-image: url(../img/foto\ 1.jpg);
-	background-size: cover;
+.slider img{
 	width: 100%;
+	object-fit: cover;/*esta propiedad sirve ´para cuando una imagen tiene tamaño diferente y se estira demás forxzando su tamaño para que quede, no solo igual que las demas si no que cubra el espacio solicitado sin afectar la calidad */
+	scroll-snap-align: center;
+
 
 }
 
-.widget2{
-	height:300px;
-	margin:20px;
-	background-image: url(../img/Ganesh-Chaturthi.jpg);
-	background-size: cover;
-	width: 100%;
-
-}
 
 footer{
 	display:flex;
@@ -279,33 +281,51 @@ footer{
     
 	.pflex {
 		flex-direction:column;
-		margin-bottom: 40px;
+		margin-bottom: 10em;
 		
 
 	}
+
+	.texto p{
+		font-size: 1.2em;
+	}
+
 	.pflex p{
+		max-width: 41em;
 		width: 100%;
 		text-align: justify;
-		font-size: 18px;
+		font-size: 0.9em;
+		margin-left: 0px;
+		margin-right: 30px;
+		margin-bottom: 10px;
+		
+		
 		
 	}
 
 	.pflex iframe{
+		max-width: 41em;
 		width: 100%;
 		margin-bottom: 30px;
-
-	}
-	aside {
-		flex-direction:column;
-		flex:0;
-		margin-top: 18em;
-		width: 100%;
-		margin-left: 20px;
-		margin-right: 20px;
-	}
-
-	.widget1 .widget2 {
+		margin-right: 50px;
 		
+
+	}
+	
+	.slider{
+		align-items: center;
+		flex-direction:column;
+		overflow-y:scroll;
+		margin-top: 40em;
+		margin-right: 30px;
+		
+		width: 100%;
+		scroll-snap-type: y 
+		mandatory;
+		
+	}
+
+	footer{
 		width: 100%;
 	}
 }
@@ -317,37 +337,100 @@ footer{
 	header{
 		flex-direction: column;
 	}
+	.texto p{
+		max-width: 50em;
+		width: 100%;
+	}
 	
 	.pflex{
 		flex-direction: column;
-		font-size: 17px;
+		margin-left: 30px;
+		margin-left: 30px;
+		
+		
 		
 	}
+
 	.pflex p{
-		font-size: 19px;
+	
+		max-width: 45em;
+		width: 100%;
+		text-align: justify;
+		margin-left: 0px;
+		margin-right: 30px;
+		margin-top: 30px;
+		
 		
 	}
 
-	aside {
-		flex-direction:column;
+	.pflex iframe{
+		max-width: 40em;
 		width: 100%;
+		margin-bottom: 30px;
+		margin-right: 30px;
+		border-radius: 10px;
 		
-		}
 
+	}
 
+	
+
+	.slider{
+		align-items: center;
+		justify-content: center;
+		flex-direction:column;
+		overflow-y:scroll;
+		margin-top: 35em;
+		margin-right: 30px;
+		
+		width: 100%;
+		scroll-snap-type: y 
+		mandatory;
+		
+	}
+	
 	footer {
 		justify-content:space-around;
 	}
 
-	.widget1 .widget2 {
-		width: 100%;
-		
-	}
-
-	
 }
 
 @media screen and (max-width: 1200px) {
+
+	.pflex{
+		flex-direction: column;
+		
+		
+	}
+
+	.pflex iframe{
+		max-width: 51em;
+		width: 100%;
+		margin-bottom: 40px;
+		margin-right: 30px;
+		border-radius: 10px;
+		
+
+	}
+
+	.pflex p{
+		
+		max-width: 51em;
+		width: 100%;
+	}
+
+	.slider{
+		align-items: center;
+		margin-top: 35em;
+		flex-direction:column;
+		overflow-y:scroll;
+		margin-right: 35px;
+		scroll-snap-type: y 
+		mandatory;
+		
+		width: 100%;
+		
+	}
 
 	
 
