--- a/css/estilos.css
+++ b/css/estilos.css
@@ -94,6 +94,7 @@ nav a:hover {
 	color: antiquewhite;
 	padding-top: 30px;
 	
+	
 
 }
 
@@ -126,7 +127,6 @@ nav a:hover {
 }
 
 .main {
-	
 	
 	padding:20px;
     height:50rem;
@@ -175,7 +175,7 @@ footer{
 	display:flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 30vh;
+	
 	width: 100%;
 
 }
@@ -262,12 +262,18 @@ footer{
 @media screen and (max-width: 320px) {
 	
 	.slider{
-		max-width:90%
+		max-width:90%;
+		overflow: hidden;
+		margin-top: 110em;
 	}
 
 	footer{
-	    width: 0%;
+		margin-top: 110em;
+		width: 100%;
 	}
+
+	
+
 
 }
 
@@ -294,7 +300,7 @@ footer{
     
 	.pflex {
 		flex-direction:column;
-		margin-bottom: 10em;
+		
 		
 
 	}
@@ -308,9 +314,8 @@ footer{
 		width: 100%;
 		text-align: justify;
 		font-size: 0.9em;
-		margin-left: 0px;
 		margin-right: 30px;
-		margin-bottom: 10px;
+		
 		
 		
 		
@@ -329,7 +334,7 @@ footer{
 		align-items: center;
 		flex-direction:column;
 		overflow-y:scroll;
-		margin-top: 40em;
+		margin-top: 100em;
 		margin-right: 30px;
 		max-width:90%;
 		scroll-snap-type: y 
@@ -338,7 +343,7 @@ footer{
 	}
 
 	footer{
-		
+		margin-top:5em;
 	}
 
 	
@@ -361,18 +366,15 @@ footer{
 		margin-left: 30px;
 		margin-left: 30px;
 		
-		
-		
 	}
 
 	.pflex p{
 	
-		max-width: 45em;
-		width: 100%;
+		
 		text-align: justify;
 		margin-left: 0px;
 		margin-right: 30px;
-		margin-top: 30px;
+		margin-bottom: 50em;
 		
 		
 	}
@@ -394,7 +396,7 @@ footer{
 		justify-content: center;
 		flex-direction:column;
 		overflow-y:scroll;
-		margin-top: 35em;
+		margin-top: 500em;
 		margin-right: 30px;
 	    max-width:90%;
 		scroll-snap-type: y 
@@ -404,6 +406,9 @@ footer{
 	
 	footer {
 		justify-content:space-around;
+		margin-top: 5em;
+	
+
 	}
 
 }
